<resources>
    <string name="app_name">路路帮</string>
    <string name="app_id">503d6674</string>
    <string name="app_about">关于路路帮</string>
    <string name="app_web_url">http://115.29.236.88/</string>
    <string name="app_exit">再按一次退出程序</string>
    <string name="app_img_path">/sdcard/lulubang/img/</string>
    <string name="app_server_m_img_path">/files/m_logo/</string>
    <string name="app_server_apk_up_path">/files/apk_up/</string>
    <string name="app_server_adv_img_path">/files/adv/</string>
    <string name="app_server_map_img_path">/files/map/</string>
     <string name="app_tmp_path">/sdcard/lulubang/</string>
    <string name="app_db_folder">/sdcard/lulubang/db/</string>
    <string name="app_db_path">/sdcard/lulubang/db/bycar.db</string>
    <string name="tv_pay_type_tab">支付方式&#160;:</string>
    <string name="tv_pay_type0">余额支付</string>
    <string name="tv_pay_type1">现金支付</string>
    <string name="err_pay_one">余额不足，请选择现金支付！</string>
    <string name="tv_map_show_title">地图显示</string>
    <string name="tv_s_unselect">未选标</string>
    <string name="tv_s_doing">进行中</string>
    <string name="tv_s_complete">已完成/已取消</string>
    <string name="tv_s_untou">未投标</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载数据</string>
    <string name="tv_add_friend">加为好友</string>
    <string name="tv_at_xzq_set">行政区设置</string>
    <string name="tv_at_map_set">地图区域设置</string>
    <string name="btn_at_map_set">区域标记</string>
    <string name="tv_map_mark_add">添加标记</string>
    <string name="tv_map_mark_save">修改标记</string>
    <string name="err_jieche_nomap">接车需要拍照取证！</string>
    <string name="err_shangche_nomap">上车车需要拍照取证！</string>
    <string name="err_shoujian_nomap">收件需要拍照取证！</string>
    <string name="err_vipsp_address_change">vip服务不能修改出发地和目的地！</string>
     <string name="tv_demand_des_tab">详细</string>
     <string name="tv_setting_tab">设置</string>
     <string name="err_p_nomap">请拍照先！</string>
    <string name="btn_area_map_set">地图区域标记</string>
     <string name="tv_qzmap">拍照人像、证件或实物上传，更有安全保障。</string>
    <string name="tv_addresstype_tab1">首先要确认服务区域所在的行政区域。行政区域要覆盖设定的服务区域，可以用下面两种方法设定更精确的服务区域。</string>
    <string name="tv_addresstype_tab2"><Data><![CDATA[ <b><font color="#ff7700">方法一</font></b> ：以设置的定点地址为圆心，一定长为半径的圆为服务范围，超出上面设定的行政区域无效。]]></Data></string>
    <string name="tv_addresstype_tab3"><Data><![CDATA[ <b><font color="#ff7700">方法二</font></b> ：在地图上设置几个点，以这几个点（按顺序）为顶点的多边形内部为服务范围，超出上面设定的行政区域无效。]]></Data></string>
    <string name="hint_goods_price">注&#160;:&#160;货物价值是赔款重要依据，但可能提高服务费。</string>
    <string name="app_noadv">没有广告信息！</string>
    <string name="tv_new_friend_apply">新朋友的申请</string>
    <string name="hint_apply_info">输入验证信息</string>
    <string name="tv_apply_info_title">验证信息</string>
    <string name="tv_apply_info_agree">同意</string>
    <string name="tv_apply_info_unagree">拒绝</string>
    <string name="tv_tousu"> 投诉</string>
     <string name="app_chongzhi">路路帮会员充值</string>
      <string name="tv_invite_title">邀请好友</string>
       <string name="tv_invite_to_do">&#160;邀&#160;请&#160;</string>
     <string name="err_chongzhi_fail">会员充值失败</string>
     <string name="err_chongzhi_suss">会员充值成功</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="tab_home">首页</string>
    <string name="tab_message">需求</string>
    <string name="tab_talk">消息</string>
    <string name="tab_shop">商家</string>
    <string name="tab_me">我的</string>
    <string name="tab_product">服务</string>
    <string name="tv_account">个人中心</string>
    <string name="tv_rmb_tab">账户金额&#160;:&#160;</string>
     <string name="tv_sign_tab">暂无签名</string>
    <string name="tv_chongzhi_tab">我要充值</string>
    <string name="tv_tixian_tab">我要提现</string>
    <string name="tv_apply_provider_tab">申请成为服务商家</string>
    <string name="tv_apply_vprovider_tab">申请成为认证服务商家</string>
    <string name="tv_tab_tos_tab">我的服务</string>
    <string name="tv_sale_tab">卖家信誉&#160;:&#160;</string>
     <string name="tv_buy_tab">买家信誉&#160;:&#160;</string>
     <string name="tv_tendprice_tab">会员报价&#160;:&#160;</string>
    <string name="err_daihuo_rz">实名认证以后才能发布快递服务！</string>
    <string name="err_daijia_rz">驾照认证以后才能发布代驾服务！</string>
    <string name="err_pinche_rz">驾照认证和车型认证以后才能发布拼车服务！</string>
    <string name="tv_price_set">价格设置</string>
    <string name="tv_price_talk">议价</string>
    <string name="tv_sss_type_tab">服务分类&#160;:&#160;</string>
    <string name="tv_apply_tab">立即申请</string>
    <string name="tv_address_tab">常用地址管理</string>
    <string name="tv_address_title">常用地址</string>
    <string name="tv_address_add">添加</string>
    <string name="tv_address_add_t">添加常用地址</string>
    <string name="hint_addresst_name">输入常用地址名称</string>
    <string name="err_addresst_name_is_null">常用地址名称不能为空！</string>
     <string name="err_exist_address_name">常用地址名称已经被使用！</string>
    <string name="tv_address_add_et">修改常用地址</string>
      <string name="tv_tixian_apply">提现申请</string>
    <string name="btn_address_type">服务区域</string>
    <string name="btn_shop_address">店铺地址</string>
    <string name="btn_sale_fangwei">经营范围</string>
    <string name="tv_sale_area_hint">请输入经营范围</string>
    <string name="toast_sale_area_is_null">请输入经营范围！</string>
    <string name="btn_company_web">公司主页</string>
     <string name="tv_company_web_hint">请输入公司主页</string>
      <string name="toast_company_web_is_null">请输入公司主页！</string>
    <string name="tv_server_product">服务列表</string>
    <string name="btn_push_product">参与服务</string>
    <string name="btn_push_product2">发布</string>
    <string name="tv_server_set">服务设置</string>
    <string name="tv_product">发布</string>
    <string name="tv_demand">需求</string>
    <string name="btn_add_addresstype">添加</string>
    <string name="tv_addresstype">区域分类</string>
    <string name="btn_edit_addresstype">编辑</string>
    <string name="tv_addresstype_add">添加区域分类</string>
    <string name="tv_addresstype_edit">编辑区域分类</string>
     <string name="tv_addresstype_view">查看区域分类</string>
    <string name="hint_addresstype_name">输入区域分类名称</string>
     <string name="btn_maker_cancle">取消标记</string>
     <string name="tv_maker_cancle_title">选择取消标记</string>
      <string name="tv_maker_tab">标记</string>
      <string name="tv_maker_cancle_tab">(已取消)</string>
     <string name="btn_pro_cancle">取消上一步</string>
    <string name="tv_addresstype_dg">操作</string>
    <string name="tv_addresstype_dg_del">删除区域分类</string>
    <string name="tv_addresstype_dg_cancel">取消</string>
    <string name="tv_do_title">操作</string>
    <string name="tv_sp_del">删除服务</string>
    <string name="tv_do_cancel">取消</string>
    <string name="cb_shop_near">定点周边</string>
    <string name="tv_shop_address_tab">定点地址还没设置，请点击设置</string>
    <string name="tv_shop_address_toast">请先设置定点地址！</string>
    <string name="hint_dts_address">输入具体地址</string>
    <string name="tv_shop_address_set">店铺地址设置</string>
    <string name="toast_addresstype_name_is_null">请输入区域分类名称！</string>
    <string name="toast_dingdian_is_null">请设置定点地址！</string>
    <string name="toast_shop_distance_is_null">请输入定点周边的距离米数！</string>
    <string name="toast_area_maker_not_enough">区域标记至少3个以上！</string>
    <string name="btn_exit">注销登录</string>
    <string name="btn_exit_app">退出程序</string>
    <string name="tv_account2">个人信息</string>
     <string name="tv_tab_rz_info">认证信息</string>
    <string name="tv_tab_base_info">基本信息</string>
    <string name="tv_tab_privacy_info">隐私信息</string>
    <string name="tv_tab_driver_info">驾照信息</string>
    <string name="tv_tab_baojia">交易报价&#160;:&#160;</string>
    <string name="tv_tab_mobile_rz">手机认证&#160;:&#160;</string>
    <string name="tv_tab_idcard_rz">身份认证&#160;:&#160;</string>
    <string name="tv_tab_driver_rz">驾照认证&#160;:&#160;</string>
    <string name="tv_tab_cartype_rz">车型认证&#160;:&#160;</string>
    <string name="tv_tab_compnay_rz">公司认证&#160;:&#160;</string>
    <string name="tv_tab_sex3">性别:&#160;</string>
    <string name="tv_tab_birthday3">生日&#160;:&#160;</string>
    <string name="tv_tab_chebao_y">&#160;,有车保</string>
    <string name="tv_tab_chebao_n">&#160;,无车保</string>
    <string name="tv_tab_nicheng">昵称</string>
    <string name="tv_tab_mobile2">手机号</string>
    <string name="tv_tab_password3">密码</string>
    <string name="tv_tab_sex">性别</string>
    <string name="tv_tab_birthday">出生日期</string>
    <string name="tv_tab_sign">个性签名</string>
    <string name="tv_tab_work">职业</string>
    <string name="tv_tab_school">学校</string>
    <string name="tv_tab_gr_about">个人说明</string>
    <string name="tv_tab_shop_address">店铺地址&#160;:&#160;</string>
    <string name="tv_tab_sale_area">经营范围&#160;:&#160;</string>
    <string name="tv_tab_company_web">公司主页&#160;:&#160;</string>
    <string name="tv_tab_sex2">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别&#160;:&#160;</string>
    <string name="tv_tab_birthday2">出生日期&#160;:&#160;</string>
    <string name="tv_tab_sign2">个性签名&#160;:&#160;</string>
    <string name="tv_tab_work2">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;业&#160;:&#160;</string>
    <string name="tv_tab_school2">学&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;校&#160;:&#160;</string>
    <string name="tv_tab_gr_about2">报价说明&#160;:&#160;</string>
    <string name="tv_tab_work3">会员职业&#160;:&#160;</string>
    <string name="tv_tab_renzheng">认证状况&#160;:&#160;</string>
    <string name="tv_tab_realname">真实姓名</string>
    <string name="tv_tab_idcard">身份证号</string>
    <string name="tv_tab_hunyin">婚姻状况</string>
    <string name="tv_tab_company">公司</string>
    <string name="tv_tab_realname3">真实姓名&#160;:&#160;</string>
    <string name="tv_tab_idcard3">身份证号&#160;:&#160;</string>
    <string name="tv_tab_hunyin3">婚姻状况&#160;:&#160;</string>
    <string name="tv_tab_company3">公&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;司&#160;:&#160;</string>
    <string name="tv_tab_driver_type2">驾照类型&#160;:&#160;</string>
    <string name="tv_tab_driver_time2">发证时间&#160;:&#160;</string>
    <string name="tv_tab_driver_code2">驾照证号&#160;:&#160;</string>
    <string name="tv_tab_driver_car2">车的型号&#160;:&#160;</string>
    <string name="tv_tab_realname2">&#160;真实姓名&#160;:&#160;</string>
    <string name="tv_tab_idcard2">&#160;身份证号&#160;:&#160;</string>
    <string name="tv_tab_idcard_map">&#160;身份证照片&#160;:&#160;</string>
    <string name="tv_tab_driver_type">&#160;驾照类型&#160;:&#160;</string>
    <string name="tv_tab_driver_time">&#160;发证时间&#160;:&#160;</string>
    <string name="tv_tab_driver_code">&#160;驾照证号&#160;:&#160;</string>
    <string name="tv_tab_driver_car">&#160;车的型号&#160;:&#160;</string>
    <string name="tv_tab_driver_map">&#160;驾照照片&#160;:&#160;</string>
    <string name="tv_tab_company2">&#160;公司名称&#160;:&#160;</string>
    <string name="btn_next">下一步</string>
    <string name="btn_get_acode">获取验证码</string>
    <string name="cb_tab_agree">同意并接受  </string>
    <string name="tv_tab_tos">《注册服务条款》</string>
    <string name="tv_username">&#160;会员昵称&#160;:&#160;</string>
    <string name="tv_password">&#160;设置密码&#160;:&#160;</string>
    <string name="tv_repassword">&#160;确认密码&#160;:&#160;</string>
    <string name="tv_tab_regresult">注册成功</string>
    <string name="btn_into_app">进入App</string>
     <string name="btn_help_info">帮助教程</string>
    <string name="btn_reg">免费注册</string>
    <string name="tv_sp_pinche_price">拼车价格&#160;:</string>
    <string name="tv_sp_time">服务时间&#160;:</string>
    <string name="tv_sp_time_tab">&#160;至&#160;</string>
    <string name="tv_sp_s_address">出发地址&#160;:</string>
    <string name="tv_sp_e_address">目的地址&#160;:</string>
    <string name="tv_sp_daijia_price_rmb_tab">元</string>
    <string name="tv_sp_unadded">下架服务</string>
    <string name="tv_sp_vip_apply">申请VIP</string>
    <string name="tv_sp_tounadded">下架</string>
     <string name="tv_shuoming">补充说明&#160;:</string>
	 <string name="tv_dc_pinjia_tab">服务评价&#160;:</string>
	 <string name="hint_dc_pinjia_tab">请填写具体的评价内容</string>
</resources>